feat: Generic DAO